packages/pubpub-editor/style/editor.scss
/* ------------ */
/* Editor */
/* ------------ */

.pub-body {
  // width: 750px;
  // padding: 0px 50px;
}

.article {
    min-height: 60vh;
}

.pub-citation-btn {
  opacity: 0.5;
  float: right;
  line-height: 1.5em;
  min-height: 1.5em;
  min-width: 1.5em;
}

.pub-citation-btn:hover {
  opacity: 1;
}

/*Wierd bug with blueprint editable text empty on default*/
.pt-editable-text:not(.pt-editable-editing) .pt-editable-content {
  height: auto !important;
}

/*
Makes empty paragraphs easier to see
*/
.Prosemirror p {
  min-height: 1em;
}

.ProseMirror.ProseMirror-nodeselection {
  outline: none;
}

.ProseMirror-nodeselection :not(textarea):not(input)::selection {
	background: transparent;
 }
.ProseMirror-nodeselection :not(textarea):not(input)::-moz-selection {
	background: transparent;
}

.ProseMirror-selectednode {
  outline: 2px solid #8cf;
}

/* Make sure li selections wrap around markers */

li.ProseMirror-selectednode {
  outline: none;
}

li.ProseMirror-selectednode:after {
  content: "";
  position: absolute;
  left: -32px;
  right: -2px; top: -2px; bottom: -2px;
  border: 2px solid #8cf;
  pointer-events: none;
}

.ProseMirror:after {
  display: table;
  clear: both;
  content: "";
}

.ProseMirror-selectednode {
  outline: 2px solid #808284;
}

.pub-reference {
  border: 1px solid transparent;
  cursor: pointer;
  padding: 1px;
}

.pub-reference.selected {
  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0)) left no-repeat, center no-repeat #ebf1f5;
  border-color: rgba(16, 22, 26, 0.2) rgba(16, 22, 26, 0.2) rgba(16, 22, 26, 0.27) rgba(16, 22, 26, 0.2);
  border-width: 1px;
  border-style: solid;
}

.pub-reference:hover {
  background-color: #f7fafb;
  border-color: rgba(16, 22, 26, 0.1) rgba(16, 22, 26, 0.1) rgba(16, 22, 26, 0.17) rgba(16, 22, 26, 0.1);
  border-width: 1px;
  border-style: solid;
}


.ProseMirror-selectednode {
    outline: none !important;
}

.pub-body .mention {
  text-decoration: underline !important;
}

.pub-body td {
  min-width: 50px;
  border: 1px solid black;
}

.pub-citations {
  cursor: pointer;
  padding: 5px;
}

.pub-citations:hover {
    box-shadow: 0 0 0 0 rgba(41, 55, 66, 0), 0 0 0 0 rgba(41, 55, 66, 0), inset 0 0 0 1px rgba(16, 22, 26, 0.15), inset 0 1px 1px rgba(16, 22, 26, 0.2);
}

.pub-latex{
  padding: 0.3em 5px 0em;
  font-size: 1.1em;
  text-align: center;
  cursor: pointer;
  line-height: 1em;
  height: 1em;
}


.pub-latex.pub-latex-block{
  height: auto;
}

.pub-latex:hover{
  box-shadow: 0 0 0 0 rgba(41, 55, 66, 0), 0 0 0 0 rgba(41, 55, 66, 0), inset 0 0 0 1px rgba(16, 22, 26, 0.15), inset 0 1px 1px rgba(16, 22, 26, 0.2);
}

.pub-reference-popover .csl-left-margin {
  display: none;
}


/*
Styling citations
*/

.csl-entry {
  display: block;
}

.csl-left-margin {
  display: inline;
  padding-right: 5px;
}

.csl-right-inline {
  display: inline;
}

/*
Selection hovers
*/

.mention::selection {
  background: none !important;
}

.mention::selection {
  background: none !important;
}

.mentionComponent::selection {
  background: none !important;
}

.pub-embed img::selection {
    background-color: transparent !important;
}

.pub-embed-latex *::selection {
    background-color: transparent !important;
}

.pub-body *:focus {
  outline: none !important;
}


/*
WIP Diff algorithms:
*/

.selection-marker {
  background-color: rgba(90, 90, 90, 0.15);
}

.mention-marker {
  // background-color: red;
}

.blame-marker{
	background-color: rgba(255,50,50,0.1);
}

.blame-marker.editing{
	background-color: rgba(50,255,50,0.1);
}

.blame-marker.editing.invisible{
	background-color: rgba(50,255,50,0.05);
}

.blame-marker.highlight{
	background-color: rgba(255,255,50,0.3);
}

.blame-marker.invisible{
	background-color: rgba(255,50,50,0.05);
}

.diff-marker.addition {
		background-color: rgba(50,255,50,0.3);
}

.diff-marker.added {
		background-color: rgba(50,255,50,0.3);
}

.diff-marker.removed {
		background-color: rgba(255,50,50,0.3);
		text-decoration: line-through;
}

